--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,23 @@
+body {
+  background-color: red;
+}
+
 #shouted {
   display:none;
+  color: rgb(163, 0, 0);
+  font-weight: bolder;
+  font-size: 15vh;
+  overflow-wrap: break-word;
+}
+
+.btn {
+  float: right;
+}
+
+.h1 {
+  color: rgb(163, 0, 0);
+}
+
+.panel-footer {
+  background-color: rgb(255, 255, 255);
 }
