style to look like danjah! unable to overcome panel-header color

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,10 @@
 body {
-  background-color: red;
+  background-color: rgb(255, 0, 0);
 }
 
 #shouted {
   display:none;
-  color: rgb(163, 0, 0);
+  color: rgb(255, 0, 0);
   font-weight: bolder;
   font-size: 15vh;
   overflow-wrap: break-word;
@@ -12,12 +12,30 @@ body {
 
 .btn {
   float: right;
+  background-color: rgb(255, 0, 0);
+  color: rgb(255, 255, 255);
 }
 
-.h1 {
-  color: rgb(163, 0, 0);
+.panel h1 {
+  color: rgb(255, 0, 0);
+}
+
+.panel {
+  background-color: rgb(255, 255, 255);
+}
+
+.panel-heading {
+  background-color: rgb(255, 0,0);
 }
 
 .panel-footer {
   background-color: rgb(255, 255, 255);
+}
+
+.main {
+  margin-top: 10vh;
+  border: solid 6px  rgb(255, 255,255);
+  border-radius: 4px;
+  padding: 20px;
+  padding-bottom:0px;
 }
